[package]
name = "hls-parser-wasm"
version = "0.1.0"
authors = ["oScape <benoit.chassignol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.50"
m3u8-rs = "1.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]